test/reusable/error/eval_selindex_child1.bfr
main {
  a: array(3) {
    x: cell;
  };
} [
  > a@x
]